# test22

./: CMakeLists.txt  README.md
.github/workflows/: windows-mingw.yml
include/: ladder.h
src/: main.cpp
src/compiler/: generator.cpp
src/core/: ladder.cpp
src/plc/: plcLib.cpp  plcLib.h
src/tui/: ui.cpp
